[gd_scene load_steps=14 format=2]

[ext_resource path="res://Game/Naves/Estaciones/AreaAtraccion.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Naves/Enemys/BaseEnemy_spaceStation_024.png" type="Texture" id=2]
[ext_resource path="res://Game/Naves/Enemys/BaseEnemy_spaceStation_029.png" type="Texture" id=3]
[ext_resource path="res://Game/Naves/Enemys/BaseEnemy_spaceStation_028.png" type="Texture" id=4]
[ext_resource path="res://Game/Naves/Enemys/BaseEnemy_spaceStation_017.png" type="Texture" id=5]
[ext_resource path="res://Game/Naves/Estaciones/BaseEnemiga.gd" type="Script" id=6]
[ext_resource path="res://Game/Naves/Enemys/AreaColision2D.gd" type="Script" id=7]

[sub_resource type="CapsuleShape2D" id=4]
radius = 61.6135
height = 369.934

[sub_resource type="CapsuleShape2D" id=5]
radius = 23.4602
height = 76.8159

[sub_resource type="CapsuleShape2D" id=6]
radius = 21.1926
height = 39.963

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaAtraccion:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaColision:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "rotacion_anti_horario"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaAtraccion:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaColision:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "rotacion_horario"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaAtraccion:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaColision:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="BaseEnemiga" type="Node2D"]
script = ExtResource( 6 )

[node name="Sprites" type="Node2D" parent="."]
position = Vector2( -4, 45 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite2" type="Sprite" parent="Sprites"]
position = Vector2( 146, -74 )
rotation = -3.14159
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Sprites"]
position = Vector2( 4.00084, -30.5925 )
texture = ExtResource( 2 )
offset = Vector2( -4.00084, 54.5925 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite4" type="Sprite" parent="Sprites"]
position = Vector2( 4, -190 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="Sprites"]
position = Vector2( 4, -234 )
texture = ExtResource( 4 )

[node name="AreaColision" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 9
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 0, 27 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 128, -30 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( -103, -28 )
rotation = -1.5708
shape = SubResource( 6 )

[node name="AreaAtraccion" parent="." instance=ExtResource( 1 )]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, 45 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 1 )
anims/rotacion_anti_horario = SubResource( 2 )
anims/rotacion_horario = SubResource( 3 )

[node name="ImpactosSFX" type="AudioStreamPlayer2D" parent="."]
visible = false
position = Vector2( 0, 26.5165 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -96, -80 )
[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
